--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 
+bundle.js
+bundle.js.map
+
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
