--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack --watch --mode=development"
+    "webpack": "webpack --watch --mode=development",
+    "postinstall": "webpack"
+  },
+  "engines": {
+    "node": "v12.13.0",
+    "npm": "6.12.0"
   },
   "repository": {
     "type": "git",
