--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch --mode=development"
   },
+  "engines": {
+    "node": "v12.13.0",
+    "npm": "6.12.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yunasty/pxClone.git"
