--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
