--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-masonry-css": "^1.0.16",
     "react-redux": "^7.2.4",
+    "react-responsive-masonry": "^2.1.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
