--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-loader": "^8.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-easy-crop": "^3.5.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-masonry-css": "^1.0.16",
     "react-redux": "^7.2.4",
