--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "dependencies": {
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
-    "@babel/preset-react": "^7.13.13",
     "babel-loader": "^8.2.2",
     "react": "^17.0.2",
     "react-country-region-selector": "^3.1.0",
@@ -15,6 +14,7 @@
     "react-responsive-masonry": "^2.1.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
+    "react-svg-loader": "^3.0.3",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "webpack": "^5.38.1",
