--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-router-dom": "^5.2.0",
     "react-svg-loader": "^3.0.3",
     "redux": "^4.1.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
