--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
     "babel-loader": "^8.2.2",
+    "file-loader": "^6.2.0",
     "react": "^17.0.2",
     "react-country-region-selector": "^3.1.0",
     "react-dom": "^17.0.2",
@@ -19,6 +20,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "svg-url-loader": "^7.1.1",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
   },
@@ -48,9 +50,5 @@
   "bugs": {
     "url": "https://github.com/yunasty/pxClone/issues"
   },
-  "homepage": "https://github.com/yunasty/pxClone#readme",
-  "devDependencies": {
-    "file-loader": "^6.2.0",
-    "svg-url-loader": "^7.1.1"
-  }
+  "homepage": "https://github.com/yunasty/pxClone#readme"
 }
