--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
+    "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "file-loader": "^6.2.0",
     "react": "^17.0.2",
